--- a/index.html
+++ b/index.html
@@ -3,41 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Simple Calculator</title>
-        <link rel="stylesheet" href="style.css">
+        <title>Practice Web</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-
-        <div id="calculator">
-            <h1 id="heading">ADAC SIMPLE CALCUTOR</h1>
-            <div id="display">
-                <input id="input" readonly>
-                <h2 id="output">0</h2>
+        <h1 id="heading">STOP WATCH</h1>
+        <div id="container">
+            <div id="display">00:00:00:00</div>
+            <div id="controls">
+                <button id="startBtn" onclick="start()">Start</button>
+                <button id="stopBtn" onclick="stop()">Stop</button>
+                <button id="resetBtn" onclick="reset()">reset</button>
             </div>
-            <div id="keys">
-                <button onclick="powerBtn()" class="funcBtn">On</button>
-                <button onclick="deleteBtn()" class="funcBtn">Del</button>
-                <button onclick="clearDisplay()" class="funcBtn">Ac</button>
-                <button onclick="appendToDisplay('/')" class="operatorBtn">÷</button>
-                <button onclick="appendToDisplay('7')">7</button>
-                <button onclick="appendToDisplay('8')">8</button>
-                <button onclick="appendToDisplay('9')">9</button>
-                <button onclick="appendToDisplay('*')" class="operatorBtn">ˣ</button>
-                <button onclick="appendToDisplay('4')">4</button>
-                <button onclick="appendToDisplay('5')">5</button>
-                <button onclick="appendToDisplay('6')">6</button>
-                <button onclick="appendToDisplay('-')" class="operatorBtn">-</button>
-                <button onclick="appendToDisplay('1')">1</button>
-                <button onclick="appendToDisplay('2')">2</button>
-                <button onclick="appendToDisplay('3')">3</button>
-                <button onclick="appendToDisplay('+')" class="operatorBtn">+</button>
-                <button onclick="appendToDisplay('0')">0</button>
-                <button onclick="appendToDisplay('.')">.</button>
-                <button onclick="currentAns()" id="ans">Ans</button>
-                <button onclick="calculate()" class="operatorBtn">=</button>
-            </div>
-            <p id="brand">From adaVin</p>
+            <a href="clock.html">Clock</a>
         </div>
-        <script src="index.js"></script>
+
+        <script src="index.js"></script> 
     </body>
 </html>
