--- a/clock.html
+++ b/clock.html
@@ -3,19 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Practice Web</title>
-        <link rel="stylesheet" href="style.css">
+        <title>Digital Clock</title>
+        <link rel="stylesheet" href="clock.css">
     </head>
     <body>
 
-        <div id="container">
-            <h1 id="heading">THE CLOCK</h1>
-            <div id="clockContainer">
-                <div id="clock">00:00:00</div>
+        <div id="mainContainer">
+            <div id="container">
+                <h1 id="heading">THE CLOCK</h1>
+                <div id="clockContainer">
+                    <div id="clock">00:00:00</div>
+                </div>
             </div>
-            <a href="index.html">Stop watch</a>
         </div>
-
+        
        <script src="clock.js"></script> 
     </body>
 </html>
