--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Adavin</title>
+    <title>ADAC265</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:700|Roboto:400,400i,700&display=swap" rel="stylesheet">
 
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap.css">
+     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     
    <script defer src="fontawesome/js/all.min.js"></script>
@@ -18,7 +18,7 @@
       <label for="check" class="checkBtn">
          <li class="fas fa-bars"></li>
       </label>
-      <label id="logo">ADAVIN</label>
+      <label id="logo">ADAC265</label>
       <ul>
          <li><a href="" class="active">Home</a></li>
          <li><a href="">About</a></li>
@@ -62,7 +62,7 @@
          </div>
       </footer>
    </section>
-   <script src="js/bootstrap.js"></script> 
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js", integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy", crossorigin="anonymous"></script> 
    <script src="adavin.js"></script> 
 </body>
 </html>
